# gra-ros2-controls

./: tasks.json
apptainer/: README.md  carmaker.def  ros_jazzy.def  setup_apptainer.sh
apptainer/carmaker/: FSAI_CM-changelog.md
bringup/: README.md
common_msgs/: README.md
control/: CMakeLists.txt  package.xml
control/scripts/: ackermann_to_cmdvel_node.py  giveitatry.py  inner_cones.csv  numpy_mppi.py  outer_cones.csv  pure_pursuit.py
fsai_api/: README.md
path_planning/: README.md
simulation/: README.md
simulation/config/: ros_gz_bridge.yaml
simulation/models/cones/: cone.sdf.xacro
simulation/models/tracks/: acceleration.sdf  acceleration.xacro  skidpad.sdf  skidpad.xacro  track_small.sdf  track_small.xacro
simulation/models/vehicle/: ads_dv.sdf  ads_dv.xacro
simulation/models/world/: physics.xacro
simulation/models/world/ground_plane/: model.config  model.sdf
simulation/models/world/sun/: model.config  model.sdf
simulation/src/: ackermann_to_speed_steer.cpp
